--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -133,20 +133,20 @@
   <data name="Account_Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Account_Logo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="1000_F_323039861_2tKzvHTbbmwmF1ZSzcxGlZKrHruJHBDA-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\1000_F_323039861_2tKzvHTbbmwmF1ZSzcxGlZKrHruJHBDA-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="1248252" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\12482521.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="69524" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\695241.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="1242850" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1242850.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Teaching" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Teaching.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="1251073" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1251073.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="69524" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\695241.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="gsms login" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gsms login1.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -156,6 +156,9 @@
   </data>
   <data name="library" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\library.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="1251619" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1251619.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Logo GSMS" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logo GSMS1.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -172,6 +175,9 @@
   <data name="teachers" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\teachers.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="1000_F_323039861_2tKzvHTbbmwmF1ZSzcxGlZKrHruJHBDA-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1000_F_323039861_2tKzvHTbbmwmF1ZSzcxGlZKrHruJHBDA-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="1202881" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1202881.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -180,6 +186,9 @@
   </data>
   <data name="208821" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\208821.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Student logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Student logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="1251053" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1251053.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -190,13 +199,7 @@
   <data name="library icons" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\library icons.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Student logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Student logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="1251619" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\1251619.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="1242850" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\1242850.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Dashboard_GSMS" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Dashboard_GSMS.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
